--- a/app/src/main/res/drawable/blue_button_unsel.xml
+++ b/app/src/main/res/drawable/blue_button_unsel.xml
@@ -2,15 +2,19 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="#ffbb18"
-        android:endColor="#ff8420"
-        android:angle="90" />
+        android:startColor="#4891dc"
+        android:endColor="#255e99"
+        android:angle="270" />
 
     <stroke
         android:color="#000000"
         android:width="2dp" />
 
     <corners
-        android:radius="20dp" />
+        android:radius="16dp" />
+
+    <padding
+        android:left="10dp"
+        android:right="10dp" />
 
 </shape>
