--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,8 +20,8 @@
         <item name="android:background">@color/black_overlay</item>
     </style>
 
-    <style name="OrangeButton">
-        <item name="android:background">@drawable/orange_button</item>
+    <style name="BlueButton">
+        <item name="android:background">@drawable/blue_button</item>
         <item name="android:textColor">#ffffff</item>
         <item name="android:layout_margin">2dp</item>
     </style>
