Added new post activity

--- a/app/src/main/res/layout/fragment_preference_save.xml
+++ b/app/src/main/res/layout/fragment_preference_save.xml
@@ -14,6 +14,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/pref_title_save"
-        style="@style/BlueButton" />
+        style="@style/PrimaryButton" />
 
 </LinearLayout>
