--- a/app/src/main/res/xml/pref_profile.xml
+++ b/app/src/main/res/xml/pref_profile.xml
@@ -34,7 +34,7 @@
         android:maxLines="1" />
 
     <picoledelimao.github.io.instadog.SavePreference
-        android:key="save"
+        android:key="pref_save"
         android:layout="@layout/fragment_preference_save" />
 
 </PreferenceScreen>
