--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
     <gradient
-        android:startColor="#c3f083"
-        android:endColor="#91d72e"
+        android:startColor="@color/background_start"
+        android:endColor="@color/background_end"
         android:angle="90" />
-
 </shape>
