--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/green_background"
+    android:background="@drawable/background"
     tools:context=".LoginActivity">
 
     <ImageView
@@ -28,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/login_etLogin"
-            style="@style/WhiteEditText" />
+            style="@style/CustomEditText" />
 
         <EditText
             android:id="@+id/etPassword"
@@ -36,14 +36,14 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:hint="@string/login_etPassword"
-            style="@style/WhiteEditText" />
+            style="@style/CustomEditText" />
 
         <Button
             android:id="@+id/btLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/login_btLogin"
-            style="@style/BlueButton"  />
+            style="@style/PrimaryButton"  />
 
     </LinearLayout>
 
