--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="@drawable/green_background"
+    android:background="@drawable/background"
     tools:context="picoledelimao.github.io.instadog.MainActivity">
 
     <android.support.design.widget.AppBarLayout
