--- a/app/src/main/res/layout/content_signup.xml
+++ b/app/src/main/res/layout/content_signup.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    android:background="@drawable/green_background"
+    android:background="@drawable/background"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_signup"
     tools:context="picoledelimao.github.io.instadog.SignupActivity">
@@ -22,7 +22,7 @@
         android:capitalize="none"
         android:singleLine="true"
         android:maxLines="1"
-        style="@style/WhiteEditText" />
+        style="@style/CustomEditText" />
 
     <EditText
         android:id="@+id/etEmail"
@@ -32,7 +32,7 @@
         android:inputType="textEmailAddress"
         android:singleLine="true"
         android:maxLines="1"
-        style="@style/WhiteEditText" />
+        style="@style/CustomEditText" />
 
     <EditText
         android:id="@+id/etPassword"
@@ -42,7 +42,7 @@
         android:inputType="textPassword"
         android:singleLine="true"
         android:maxLines="1"
-        style="@style/WhiteEditText" />
+        style="@style/CustomEditText" />
 
     <EditText
         android:id="@+id/etRepeatPassword"
@@ -52,13 +52,13 @@
         android:inputType="textPassword"
         android:singleLine="true"
         android:maxLines="1"
-        style="@style/WhiteEditText" />
+        style="@style/CustomEditText" />
 
     <Button
         android:id="@+id/btSignup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/signup_btSignup"
-        style="@style/BlueButton" />
+        style="@style/PrimaryButton" />
 
 </LinearLayout>
