--- a/app/src/main/res/layout/fragment_preference_photo.xml
+++ b/app/src/main/res/layout/fragment_preference_photo.xml
@@ -20,6 +20,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/pref_title_photo_upload"
-        style="@style/BlueButton" />
+        style="@style/PrimaryButton" />
 
 </LinearLayout>
