--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-
     <color name="black_overlay">#66000000</color>
+    <color name="background_start">#c3f083</color>
+    <color name="background_end">#91d72e</color>
+    <color name="primary_button_start">#4891dc</color>
+    <color name="primary_button_end">#255e99</color>
+    <color name="widget_stroke">#000000</color>
 </resources>
