--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
+    <dimen name="widget_corners_radius">16dp</dimen>
+    <dimen name="widget_padding">10dp</dimen>
+    <dimen name="widget_stroke_width">1dp</dimen>
 </resources>
