--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,14 +20,14 @@
         <item name="android:background">@color/black_overlay</item>
     </style>
 
-    <style name="BlueButton">
-        <item name="android:background">@drawable/blue_button</item>
+    <style name="PrimaryButton">
+        <item name="android:background">@drawable/primary_button</item>
         <item name="android:textColor">#ffffff</item>
         <item name="android:layout_margin">2dp</item>
     </style>
 
-    <style name="WhiteEditText">
-        <item name="android:background">@drawable/white_edittext</item>
+    <style name="CustomEditText">
+        <item name="android:background">@drawable/custom_edittext</item>
         <item name="android:layout_margin">2dp</item>
     </style>
 
