--- a/app/src/main/res/layout/list_home.xml
+++ b/app/src/main/res/layout/list_home.xml
@@ -26,6 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_margin="10dp"
+            android:clickable="true"
             style="@android:style/TextAppearance.Large" />
 
     </LinearLayout>
